--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">[KGT] 2조 Testing App</string>
+    <string name="vision">VISION</string>
+    <string name="btn1">카메라</string>
+    <string name="btn2">갤러리</string>
+    <string name="btn3">변환</string>
 </resources>
