HH-Android Preview

--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="vision">Preview</string>
     <string name="btn1">카메라</string>
     <string name="btn2">갤러리</string>
-    <string name="btn3">변환</string>
+    <string name="btn3">범위 지정</string>
     <string name="seekbarTitle">Noise Percent</string>
     <string name="Title">Vision</string>
 </resources>
